--- a/css/style.css
+++ b/css/style.css
@@ -81,9 +81,19 @@ body{
     background-color:darkgray;
 
 }
+:root {
+    --primary:#EEBF00;
+    --secondary:#232B38;
+    --ternary:#6C6C6C;
+    --danger:#FE4545;
+    --pure:#FEFEFE;
+    --light:#F0F0F0;
+    --heaven:#FFFFFF;
+    --footer:#2D333F;
+}
 .container {
-    width :100%;
-    padding:0 25%;
+    width :70%;
+    padding:0 5%;
     margin:0 auto;
     display:flex;
     justify-content:space-between;
@@ -98,6 +108,9 @@ body{
 .justifycontent{
     justify-content:space-between;
 }
+.justifycenter{
+    justify-content:center;
+}
 .container div{
 
     margin: 1.2rem 0;
@@ -106,7 +119,28 @@ body{
 .container div a{
     margin: 0 0.2rem;
 }
-/* Small devices (portrait tablets and large phones, 600px and up) */
+.j{
+    text-decoration:none;
+    color:var(--secondary);
+    font-family:"Raleway-semibold";
+    font-size:1rem;
+    padding:1rem 1.5rem;
+    transition:all .3s ease;
+    -webkit-transition:all .3s ease;
+    -moz-transition:all .3s ease;
+    -ms-transition:all .3s ease;
+    -o-transition:all .3s ease;
+}
+.active.active{
+    background:var(--primary);
+    color:var(--pure);
+    padding:1rem 1.5rem;
+}
+.j:hover{
+    background:var(--primary);
+    color:var(--pure); 
+}
+/* Small devices (portrait tablets and large phones, 600px and up)
 @media(min-width: 600px) {
 .container{
 
@@ -115,7 +149,7 @@ body{
 
 }
 
-/* Medium devices (landscape tablets, 768px and up) */
+/* Medium devices (landscape tablets, 768px and up)
 @media(min-width: 768px) {
     .container{
 
@@ -124,7 +158,7 @@ body{
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media(min-width: 992px) {
+/* @media(min-width: 992px) {
 
     .container{
 
@@ -133,12 +167,12 @@ body{
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media(min-width: 1200px) {
+/* @media(min-width: 1200px) {
     .container{
 
         max-width: 1152px;
     }
-}
+}  */ */
 .topbar{
     background-color: #1A1E29;
 }
