--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,10 @@
 }
 @font-face {
     font-family: raleway-ExtraBoldItalic;
-    src: url(../fonts/Raleway-ExtraBoldItalic.ttf);
-}
+    src: url(../fonts/Raleway-ExtraBoldItalic.ttf)}
 @font-face {
     font-family: raleway-extralight;
-    src: url(../fonts/Raleway-ExtraLight.ttf);
-}
+    src: url(../fonts/Raleway-ExtraLight.ttf);}
 @font-face {
     font-family: raleway-ExtraBoldItalic;
     src: url(../fonts/Raleway-ExtraBoldItalic.ttf);
@@ -70,15 +68,29 @@
     font-family: raleway-thin;
     src: url(../fonts/Raleway-Thin.ttf);
 }
-/* *{
 
-    padding : 0px;
-    margin : 0px;
-    box-sizing: border-box;
-} */
+@media (min-width: 992px) {
+    .container {
+      max-width: 900px;
+    }
+  }
+  *{
+    padding:0;
+    margin:0;
+    box-sizing: border-box;  
+   }
+  
 body{
+  
+        width:100%;
+        height:100%;
+        background:var(--light);
+        position: absolute;
+        top:0;
+        left:0;
+        padding:0;
+        z-index:1;
 
-    background-color:darkgray;
 
 }
 :root {
@@ -92,7 +104,7 @@ body{
     --footer:#2D333F;
 }
 .container {
-    width :70%;
+    width :100%;
     padding:0 5%;
     margin:0 auto;
     display:flex;
@@ -172,10 +184,7 @@ body{
 
         max-width: 1152px;
     }
-}  */ */
-.topbar{
-    background-color: #1A1E29;
-}
+}  */ 
 a{
     color: white;
     text-decoration: none;
